--- a/ml-service/pyproject.toml
+++ b/ml-service/pyproject.toml
@@ -6,16 +6,35 @@ authors = [
     {name = "whitefooox",email = "whitefox061@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11.11"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "fastapi-cli (>=0.0.7,<0.0.8)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "environs (>=14.1.1,<15.0.0)",
+    "black (>=25.1.0,<26.0.0)",
+    "pre-commit (>=4.2.0,<5.0.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "ml_service", from = "src"}]
 
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
